--- a/FXExperienceTools/src/main/resources/styles/spline.css
+++ b/FXExperienceTools/src/main/resources/styles/spline.css
@@ -10,28 +10,50 @@ different terms and without source code for the larger work.
     Created on : May 8, 2017, 12:05:37 AM
     Author     : andje22
 */
+
+.root {
+    -fe-body-background: #2c2f33;
+    -fe-inner-background: #23272a;
+    -fe-border: #676B6F;
+    -fe-body-text: #BBB;
+    -fe-inner-text: #FFF;
+    /*-font-family: 'Roboto';*/
+    -fx-background-color: #2c2f33;
+    -fx-focus-color: #339797;
+    -dark-header: #23272a;
+    -gray-darker: #2c2f33;
+    -gray-dark: #2d2d2d;
+    -gray-one: #383838;
+    -gray-light: #444444;
+    -gray-lighter: #5c5c5c;
+    -text-primary: #FFF;
+    -text-secondary: #BBBBBB;
+    -text-disabled: derive(#FFF, -50%);
+}
+
 #SplineEditor {
     -fx-background-image: url("../images/darkdenim.png");
     -fx-effect: innershadow( three-pass-box , rgba(0,0,0,0.4) , 80, 0.0 , 0 , 0 );
 }
 
 .label {
-    -fx-text-fill: white;
-    -fx-underline: true;
-}
-.animation-label {
-    -fx-font-family: "Helvetica Neue", "Lucida Grande", "sans-serif";
-    -fx-font-weight: bold; 
-    -fx-font-size: 1.25em;
-    -fx-text-fill: #C2C2C3;
+    -fx-text-fill: -text-secondary;
     -fx-underline: true;
 }
 
+
+.animation-label {
+    -fx-font-family: "Roboto";
+    /*-fx-font-style: "Medium";*/
+    -fx-font-size: 1.25em;
+    -fx-text-fill: derive(-text-primary, -30%);
+}
+
 .code-text {
-    -fx-font-family: "Courier New";
+    /*-fx-font-family: "Courier New";*/
     -fx-font-size: 18px;
-    -fx-text-fill: white;
-    -fx-background-color: transparent;
+    -fx-text-fill: -text-primary;
+    -fx-background-color: rgba(12, 12, 12, .2);
 }
 
 .chart-plot-background {
