--- a/FXExperienceTools/src/main/resources/styles/animation_panel.css
+++ b/FXExperienceTools/src/main/resources/styles/animation_panel.css
@@ -1,14 +1,3 @@
-/*.root {*/
-
-    /*-fx-font-size: .675em;*/
-    /*-fx-base: #282828;*/
-    /*-fx-background: #1B1B1B;*/
-    /*-fx-focus-color: #0093FF;*/
-    /*-fx-control-inner-background: #666666;*/
-    /*-fx-inner-border: linear-gradient(to bottom, derive(-fx-color,73.6%) 0%, derive(-fx-color,29.200000000000003%) 100%);*/
-    /*-fx-body-color: linear-gradient( to bottom, derive(-fx-color, 34.0%) 0%, derive(-fx-color, -18.0%) 100%);*/
-/*}*/
-
 #animateTest {
     -fx-background-color: 
         #083156,
@@ -26,72 +15,39 @@
     -fx-font-weight: bold;
     -fx-effect: dropshadow( three-pass-box , rgba(0,155,255,.3) , 7 , 0.4 , 0 , 0 );
 }
-.button, .toggle-button, .choice-box {
-    -fx-background-radius: 5, 5, 4, 3;
-    -fx-padding: 6px 15x 6px 15px;
-}
-.menu-button {
-    -fx-background-radius: 5, 5, 4, 3;
-}
-.menu-button .label {
-    -fx-padding: 3px 18px 3px 10px;
-}
-.menu-button .arrow-button {
-    -fx-padding: 3px 6px 3px 0px;
-}
-.choice-box {
-    -fx-padding: 0 6px 0 0;
-}
-.choice-box .label {
-    -fx-padding: 3px 4px 3px 6px;
-}
-.choice-box .open-button {
-    -fx-padding: 1 0 0 8px;
-}
-.combo-box-base:editable .text-field, .combo-box-base .arrow-button, .combo-box .list-cell {
-    -fx-padding: 3px 6px 3px 6px;
-}
-.check-box .box {
-    -fx-padding: 0.25em;
-}
-.radio-button .radio {
-    -fx-padding: 0.333333em;
-}
+
+
+
 .label, .check-box, .radio-button {
     -fx-text-fill: -fx-text-background-color;
 }
-.button, .toggle-button, .check-box .box, .radio-button .radio, .choice-box, .menu-button, .tab, .combo-box-base {
+.button,
+.toggle-button,
+.check-box .box,
+.radio-button .radio,
+.choice-box,
+.menu-button, .tab,
+.combo-box-base {
+    -fx-background-color: -fx-shadow-highlight-color, -fx-outer-border, -fx-inner-border, -fx-body-color;
     -fx-background-insets: 0 0 -1 0, 0, 1, 2;
-}
-.button:focused, .toggle-button:focused, .check-box:focused .box, .radio-button:focused .radio, .choice-box:focused, .menu-button:focused, .combo-box-base:focused {
-    -fx-focus-color: #0093FF;
-    -fx-background: #666666;
-    -fx-background-insets: -1.4, 0, 1, 2;
-}
-.combo-box-base .arrow-button {
-    -fx-background-insets: 0, 1, 2;
-}
-.choice-box .label { /* Workaround for RT-20015 */
+    -fx-background-radius: 3px, 3px, 2px, 1px;
+    -fx-padding: 0.333333em 0.666667em 0.333333em 0.666667em; /* 4 8 4 8 */
     -fx-text-fill: -fx-text-base-color;
-}
-.menu-button .label { /* Workaround for RT-20015 */
-    -fx-text-fill: -fx-text-base-color;
+    -fx-alignment: CENTER;
+    -fx-content-display: LEFT;
 }
 
 #animateTestArea {
-     -fx-background-color: radial-gradient(center 50% 70%, radius 180%, #2e3134, #3F4044);
+     -fx-background-color: darkslategray;
+}
+
+.buttons-grid {
+    -fx-background-radius: 10px;
+    -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);
 }
 
 #Background {
-    -fx-background: #3F4044;
-    -fx-background-insets: 0, 0 1 0 1;
-}
-.scroll-bar:focused {
-    -fx-background-color: derive(-fx-box-border,30%), linear-gradient(to bottom, derive(-fx-base,-3%), derive(-fx-base,5%) 50%, derive(-fx-base,-3%));
-    -fx-background-insets: 0, 1 0 1 0;
-}
-.scroll-bar:vertical:focused {
-    -fx-background-color: derive(-fx-box-border,30%), linear-gradient(to right, derive(-fx-base,-3%), derive(-fx-base,5%) 50%, derive(-fx-base,-3%));
+    -fx-background: #212528;
     -fx-background-insets: 0, 0 1 0 1;
 }
 
@@ -99,7 +55,7 @@
     -fx-background-color: transparent;
 }
 .split-pane-divider {
-    -fx-background-color: #2e3134;
+    -fx-background-color: transparent;
 }
 
 .canned-split-pane {
@@ -107,35 +63,39 @@
     -fx-background-color: transparent;
 }
 .button-anchorpane {
-    -fx-background-color:
-            #083156,
-            #657c87,
-            #46626f,
-            #123,
-            linear-gradient(#234,#345,#234),
-            linear-gradient(from 30% -10% to 70% 110%, rgba(100,155,155,0), rgba(100,155,155,.1) 50%, rgba(0,0,0,0) 50%);
+    -fx-background-color: #23272a;
     -fx-background-radius: 3,5,5,4,3,5;
     -fx-background-insets: 0, 1,2 1 1 1,2,2, 0;
     -fx-effect: dropshadow( three-pass-box , rgba(0,155,255,.3) , 7 , 0.4 , 0 , 0 );
 }
-.root-stackpane {
-    -fx-background-color: #2e3134;
+.root-pane {
+    -fx-background-color: darkslategray;
 }
 .section-buttons {
-    -fx-background-color: #2e3134;
+    -fx-background-color: #2e3134, #2e3134, #2e3134, darkslategray;
+    -fx-background-insets: 0 0 -1 0, 0, 1, 2;
+    -fx-background-radius: 2px, 2px, 2px, 2px;
+    /*-fx-padding: 0.11667em 0.233333em 0.133333em 0.233333em; !* 4 8 4 8 *!*/
     -fx-text-fill: #CDEFF1;
-    -fx-font-size: .965em;
+    -fx-font-size:  0.916667em
 }
 .section-buttons:focused {
-    -fx-background-color: #46626f;
-    -fx-text-fill: #CDEFF1;
-    -fx-font-size: .965em;
-    -fx-effect: dropshadow( three-pass-box , rgba(0,155,255,.3) , 7 , 0.4 , 0 , 0 );
+    /*-fx-background-color: -fx-focus-color, #2e3134, #2e3134, #46626f;*/
+    -fx-background-color: -fx-focus-color, #263835, #46626f, #394142, #46626f;
+    /*-fx-background-color: -fx-focus-color, -fx-inner-border, -fx-body-color, -fx-faint-focus-color, -fx-body-color;*/
+    -fx-background-insets: -0.2, 0.5, 1, -0.7, 1.3;
+    -fx-background-radius: 3, 2, 1, 4, 1;
+    /*-fx-effect: dropshadow( three-pass-box , rgba(0,155,255,.3) , 7 , 0.4 , 0 , 0 );*/
 }
 .section-label {
-    -fx-font-family: 'Francois One';
+    -fx-background-color: derive(darkslategray, 30%);
+    -fx-background-radius: 2;
+    -fx-padding: 0.233333em 0em 0.233333em 0em; /* 4 8 4 8 */
+    -fx-background-insets: 0, 2, 0, 2;
+    -fx-font-family: 'Noto Sans';
     -fx-font-weight: bold;
-    -fx-font-size: .965em;
+    -fx-font-size: 1em;
     -fx-text-fill: #CDEFF1;
-    -fx-effect: dropshadow( three-pass-box , rgba(0,155,255,.3) , 7 , 0.4 , 0 , 0 );
+
+    /*-fx-effect: dropshadow( three-pass-box , rgba(0,155,255,.3) , 7 , 0.4 , 0 , 0 );*/
 }
