--- a/FXExperienceTools/src/main/resources/styles/main_dark.css
+++ b/FXExperienceTools/src/main/resources/styles/main_dark.css
@@ -111,21 +111,29 @@ different terms and without source code for the larger work.
 /*******************************************************************************
  * Preview panel background		                                               *
  ******************************************************************************/
-#ContentPanel {
-/*    -fx-background-color: transparent;*/
+
+#Preview-area {
     -fx-background-color: -fx-background;
-  //  -fx-border-color: derive(rgb(147, 147, 147),60%);
-    -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.6) , 8, 0.0 , 0 , 2 );
 }
+
+#ContentPanel {
+    -fx-background-color: transparent;
+}
+
+/*******************************************************************************
+ * Properties input fields		                                               *
+ ******************************************************************************/
+#PropertiesPanel .title {
+    -fx-font-size: 16px;
+    -fx-font-weight: bold;
+}
+
 
 #PropertiesPanel .title {
     -fx-font-size: 16px;
     -fx-font-weight: bold;
 }
 
-/*******************************************************************************
- * Properties input fields		                                               *
- ******************************************************************************/
 .integer-field {
     -fx-alignment: BASELINE_LEFT;
 }
