--- a/FXExperienceTools/src/main/resources/styles/spline.css
+++ b/FXExperienceTools/src/main/resources/styles/spline.css
@@ -37,7 +37,7 @@ different terms and without source code for the larger work.
 }
 
 .label {
-    -fx-text-fill: -text-secondary;
+    -fx-text-fill: derive(#FFF, -30%);
     -fx-underline: true;
 }
 
@@ -46,13 +46,13 @@ different terms and without source code for the larger work.
     -fx-font-family: "Roboto";
     /*-fx-font-style: "Medium";*/
     -fx-font-size: 1.25em;
-    -fx-text-fill: derive(-text-primary, -30%);
+    -fx-text-fill: derive(#FFF, -30%);
 }
 
 .code-text {
     /*-fx-font-family: "Courier New";*/
     -fx-font-size: 18px;
-    -fx-text-fill: -text-primary;
+    -fx-text-fill: #FFF;
     -fx-background-color: rgba(12, 12, 12, .2);
 }
 
@@ -66,7 +66,7 @@ different terms and without source code for the larger work.
     -fx-stroke: rgba(255,255,255,0.1);
 }
 .tick-mark {
-    -fx-fill: #DCDCDC;
+    -fx-fill: #FFF;
     -fx-font-size: 11px;
 }
 
